publish: remove rubish
generated from commit 9096b4cf6678f58e662278627e63c8752876476c

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ HMACを使う為に、標準化しないと署名の結果は変わります
 </tr>
 </tbody></table>
 <h2 id='c6f832ae00'>対応取引通貨ペア</h2><pre class="highlight shell tab-shell"><code>curl -X GET <span class="se">\</span>
-     <span class="s2">"https://api-cloud.huobi.co.jp//v1/common/currencys"</span>
+     <span class="s2">"https://api-cloud.huobi.co.jp/v1/common/currencys"</span>
 </code></pre>
 <blockquote>
 <p>上記のコマンドは、次のような構造のJSONを返します。</p>
@@ -719,7 +719,7 @@ HMACを使う為に、標準化しないと署名の結果は変わります
 </tr>
 </tbody></table>
 <h2 id='de96e45aa6'>システム時間を調べる</h2><pre class="highlight shell tab-shell"><code>curl -X GET <span class="se">\</span>
-      <span class="s2">"https://api-cloud.huobi.co.jp//v1/common/timestamp"</span>
+      <span class="s2">"https://api-cloud.huobi.co.jp/v1/common/timestamp"</span>
 </code></pre>
 <blockquote>
 <p>上記のコマンドは、次のような構造のJSONを返します。</p>
