publish: remove rubish
generated from commit 9096b4cf6678f58e662278627e63c8752876476c

--- a/index.html
+++ b/index.html
@@ -1612,7 +1612,7 @@ HMACを使う為に、標準化しないと署名の結果は変わります
 <tr>
 <td>amount</td>
 <td>true</td>
-<td>指値の表示注文数量，成り行きで買う時は幾らで買うかを表示，成り行きで売る時に何枚売るかを表示</td>
+<td>注文数量</td>
 </tr>
 <tr>
 <td>price</td>
