publish: fix document withdrawal fee
generated from commit 2ad44d32746409fc0c90cb6aca7821cef2c411a2

--- a/index.html
+++ b/index.html
@@ -475,14 +475,39 @@
 </tr>
 </tbody></table>
 
-<aside class="info">
+<aside class="success">
 秘密キーは申請時のみ表示されますので、ご注意ください。
 </aside>
 
 <aside class="warning">
 これらの二つのキーはアカウントのセキュリティに関する重要なものなので絶対に他人に開示しないでください。
 </aside>
-<h3 id='2'>2. リクエストの共通仕様</h3>
+<h3 id='2-api-key'>2. API KEYの権限設定</h3>
+<table><thead>
+<tr>
+<th>権限</th>
+<th>説明</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>読取</td>
+<td>アカウント情報、取引履歴、入出金履歴の参照ができます</td>
+</tr>
+<tr>
+<td>出金</td>
+<td>仮想通貨の出金申請ができます</td>
+</tr>
+<tr>
+<td>取引</td>
+<td>取引所、販売所の取引注文、キャンセルができます</td>
+</tr>
+</tbody></table>
+
+<ul>
+<li>デフォルトは読取権限になります。</li>
+<li>他の権限を追加したい場合、<b>権限設定のチェックボックス</b>をチェックしてから作成してください。</li>
+</ul>
+<h3 id='3'>3. リクエストの共通仕様</h3>
 <p>セキュリティ上の理由で、マーケットAPI以外のAPIリクエストには全て署名が必要となります。これから共通の仕様を説明します。</p>
 
 <blockquote>
