publish: remove-cfd-link-and-fix-currency-name
generated from commit a2f62802f5e8adf771cd601197044277f44af0de

--- a/index.html
+++ b/index.html
@@ -426,7 +426,9 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='api'>APIの紹介</h1><h2 id='ebb21425d1'>前書き</h2>
-<p>Huobi APIへようこそ。当社のAPIを使用して、すべてのマーケットデータ、取引、およびアカウント管理のエンドポイントにアクセスできます。</p>
+<p>Huobi APIへようこそ。当社のAPIを使用して、マーケットデータ、取引、およびアカウント管理のエンドポイントにアクセスできます。</p>
+
+<p>*現在、レバレッジ取引には未対応です。</p>
 
 <p>下記の２種類のAPIを用意いたします。</p>
 
